# hw_5_pack_app_in_docker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  README.md  compose.override.dev.yaml  hello.py  justfile  pyproject.toml
app/: __init__.py  app.py
app/services/: __init__.py  faker_get_name_address.py
just/: homework.just
just/homework/: docker.just  main.just  vars.just
